[gd_scene load_steps=3 format=3 uid="uid://b7rs82d8itaut"]

[ext_resource type="PackedScene" uid="uid://c8411fpc13xh8" path="res://UI/scenes/healthBar.tscn" id="1_swpt3"]
[ext_resource type="Script" uid="uid://q40u80jb4xle" path="res://UI/scripts/BossUI.gd" id="1_ty3xu"]

[node name="BossUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ty3xu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -654.0
offset_top = 30.0
offset_right = 654.0
offset_bottom = 230.0
grow_horizontal = 2
theme_override_constants/separation = 12

[node name="BossTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48

[node name="Healths" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Boss" type="HBoxContainer" parent="VBoxContainer/Healths"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="HealthBar" parent="VBoxContainer/Healths/Boss" instance=ExtResource("1_swpt3")]
visible = false
custom_minimum_size = Vector2(1200, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1500.0
value = 100.0

[node name="HealthVal" type="Label" parent="VBoxContainer/Healths/Boss"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "100"

[node name="MiniBoss" type="HBoxContainer" parent="VBoxContainer/Healths"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="HealthBar" parent="VBoxContainer/Healths/MiniBoss" instance=ExtResource("1_swpt3")]
visible = false
custom_minimum_size = Vector2(1000, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1500.0
value = 100.0

[node name="HealthVal" type="Label" parent="VBoxContainer/Healths/MiniBoss"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "100"

[connection signal="value_changed" from="VBoxContainer/Healths/Boss/HealthBar" to="." method="_on_health_bar_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Healths/MiniBoss/HealthBar" to="." method="_on_MiniBoss_health_bar_value_changed"]
